# PushStreamDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yuong/pushstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  PrintLog.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  queue.h
app/src/main/cpp/include/: x264.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/yuong/pushstream/: LivePusher.java  MainActivity.java
app/src/main/java/com/yuong/pushstream/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yuong/pushstream/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
